Refatorando e organizando activities

--- a/app/src/main/res/layout/activity_cadastro_pedido_de_venda.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido_de_venda.xml
@@ -60,17 +60,17 @@
         app:layout_constraintTop_toBottomOf="@+id/et_cadastro_pedido_venda_quantidade" />
 
     <Button
-    android:id="@+id/bt_cadastro_pedido_venda_lancar_pedido"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginEnd="8dp"
-    android:onClick="criaListaPedidoVenda"
-    android:text="Lançar pedido"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/et_cadastro_pedido_venda_valor" />
+        android:id="@+id/bt_cadastro_pedido_venda_lancar_pedido"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="registraItemVenda"
+        android:text="Registra item de venda"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_cadastro_pedido_venda_valor" />
 
     <Button
         android:id="@+id/bt_cadastro_pedido_venda_confirma_pedido"
@@ -79,8 +79,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:onClick="cadastrar"
-        android:text="Lançar pedido"
+        android:onClick="confirmarPedidoVenda"
+        android:text="Confirma pedido"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido" />
