--- a/app/src/main/res/layout/activity_cadastro_pedido_de_venda.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido_de_venda.xml
@@ -11,9 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/cliente_dois_pontos"
-        android:textSize="18sp"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/spin_cadastro_pedido_venda_cliente"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,29 +25,44 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
+        app:layout_constraintBottom_toTopOf="@+id/tv_cadastro_pedido_venda_produto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_venda_cliente" />
+
+    <TextView
+        android:id="@+id/tv_cadastro_pedido_venda_produto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/produto_dois_pontos"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/spin_cadastro_pedido_venda_produto"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spin_cadastro_pedido_venda_cliente" />
 
     <Spinner
         android:id="@+id/spin_cadastro_pedido_venda_produto"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
+        app:layout_constraintBottom_toTopOf="@+id/et_cadastro_pedido_venda_quantidade"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spin_cadastro_pedido_venda_cliente" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_pedido_venda_produto" />
 
     <EditText
         android:id="@+id/et_cadastro_pedido_venda_quantidade"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="@string/Quantidade"
@@ -59,7 +76,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="@string/Valor_venda"
@@ -92,27 +109,42 @@
         android:text="Confirma pedido"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_cancelar" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/bt_cadastro_pedido_venda_limpa_lista_itens"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Limpa Lista de itens"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido"
+        android:onClick="limpaListaDeItensDeVenda"/>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/bt_cadastro_pedido_venda_cancelar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:onClick="cancelaPedidoDeVenda"
         android:text="Cancelar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido"
-        android:onClick="cancelaPedidoDeVenda"/>
+        app:layout_constraintStart_toEndOf="@+id/bt_cadastro_pedido_venda_limpa_lista_itens"
+        app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_pedido_venda_lancar_pedido" />
+
+    <ProgressBar
+        android:id="@+id/pb_cadastro_pedido_venda_carregando"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:progressTint="#F50202"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
