--- a/app/src/main/res/layout/activity_cadastro_pedido_de_venda.xml
+++ b/app/src/main/res/layout/activity_cadastro_pedido_de_venda.xml
@@ -141,10 +141,12 @@
         android:layout_height="wrap_content"
         android:indeterminate="false"
         android:progressTint="#F50202"
+        android:translationZ="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
         tools:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
