Inserindo rotina de conferencia

--- a/app/src/main/res/layout/activity_conferencia_de_saida.xml
+++ b/app/src/main/res/layout/activity_conferencia_de_saida.xml
@@ -4,6 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.frontpi4.activities.ConferenciaDeSaidaActivity">
+    tools:context=".activities.ConferenciaDeSaidaActivity">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_conferencia_saida"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
