--- a/app/src/main/res/layout/activity_lista_produtos.xml
+++ b/app/src/main/res/layout/activity_lista_produtos.xml
@@ -2,20 +2,57 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".activities.ProdutosActivity">
+
+    <TextView
+        android:id="@+id/tv_produto_nome"
+        android:layout_width="176dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="8dp"
+        android:background="#00756A6A"
+        android:text="NOME"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_produto_preco"
+        app:layout_constraintEnd_toStartOf="@+id/tv_produto_preco"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_produto_preco" />
+
+    <TextView
+        android:id="@+id/tv_produto_preco"
+        android:layout_width="100dp"
+        android:layout_height="25dp"
+        android:text="PREÇO/m³"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_produto_quantidade"
+        app:layout_constraintEnd_toStartOf="@+id/tv_produto_quantidade"
+        app:layout_constraintStart_toEndOf="@+id/tv_produto_nome"
+        app:layout_constraintTop_toTopOf="@+id/tv_produto_quantidade"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/tv_produto_quantidade"
+        android:layout_width="100dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="QUANTIDADE"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.78"
+        app:layout_constraintStart_toEndOf="@+id/tv_produto_preco"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_todos_produto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="613dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_produto_preco" />
 </androidx.constraintlayout.widget.ConstraintLayout>
