--- a/app/src/main/res/layout/recyclerview_layout_item_todos_produtos.xml
+++ b/app/src/main/res/layout/recyclerview_layout_item_todos_produtos.xml
@@ -5,19 +5,24 @@
 
     <TextView
         android:id="@+id/tv_recyclerview_nome_produto"
-        android:layout_width="154dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:background="#00DBD5D5"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_recyclerview_preco_produto"
-        android:layout_width="129dp"
+        android:layout_width="100dp"
         android:layout_height="match_parent"
+        android:background="#00F7F2F2"
+        android:textAlignment="center"
         android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_recyclerview_qtd_produto"
-        android:layout_width="91dp"
+        android:layout_width="100dp"
         android:layout_height="match_parent"
+        android:background="#00DBD5D5"
+        android:textAlignment="center"
         android:textSize="18sp" />
 </LinearLayout>
