Melhorando rotina de conferencia de saida

--- a/app/src/main/res/layout/activity_alteracao_usuario.xml
+++ b/app/src/main/res/layout/activity_alteracao_usuario.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_altera_usuario_password" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_confere_saida_conferir"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
